修改了首页一部分

--- a/templates/view/firstpage/index.html
+++ b/templates/view/firstpage/index.html
@@ -59,7 +59,7 @@
                             <li class=""></li>
                         </ul>
                     </div><!--hd end-->
-                    <div class="bd">
+                    <div class="bd ">
                         <ul id="uls" style="position: relative; width: 1200px; height: 486px;">
                             <li style="position: absolute; width: 1200px; left: 0px; top: 0px; display: block;">
                                 <a href="#" target="_blank">
@@ -2275,7 +2275,7 @@
             </div>
             <div>
                 <div class="title">
-                    官网直购
+                    正品保障
                 </div>
                 <span>厂家直接发货，100%正品</span>
             </div>
@@ -2293,13 +2293,13 @@
         </div>
         <div class="item">
             <div class="icon">
-                量
+                售
             </div>
             <div>
                 <div class="title">
-                    海量商品
+                    售后无忧
                 </div>
-                <span>全球千万酒品，一站购齐</span>
+                <span>7天无理由退货</span>
             </div>
         </div>
         <div class="item">
