--- a/templates/view/gooddetail/index.html
+++ b/templates/view/gooddetail/index.html
@@ -812,44 +812,44 @@
                 <div class="property-img">
                     <div class="item">
                         <div class="icon">
-                            正
+                            买
                         </div>
                         <div>
                             <div class="title">
-                                官网直购
+                                拼的是手速
                             </div>
-                            <span>厂家直接发货，100%正品</span>
+                            <span>厂家直接发货，正品您放心</span>
                         </div>
                     </div>
                     <div class="item">
                         <div class="icon">
-                            ￥
+                            买
                         </div>
                         <div>
                             <div class="title">
-                                实时同价
+                                拼的是网速
                             </div>
-                            <span>实时同步厂家价格及折扣</span>
+                            <span>价格折扣，谁能抢更多</span>
                         </div>
                     </div>
                     <div class="item">
                         <div class="icon">
-                            量
+                            买
                         </div>
                         <div>
                             <div class="title">
-                                海量商品
+                                拼的是技术
                             </div>
                             <span>全球千万酒品，一站购齐</span>
                         </div>
                     </div>
                     <div class="item">
                         <div class="icon">
-                            付
+                            买
                         </div>
                         <div>
                             <div class="title">
-                                一键支付
+                                拼的是实力
                             </div>
                             <span>支付宝，微信一键下单</span>
                         </div>
@@ -1014,7 +1014,7 @@
 </div><!--out-wrap end-->
 
 <!--版权信息代码-->
-<div class="new-footer clearfix" style="padding-bottom: 0px;">
+<div class="new-footer clearfix" >
     <div class="pop-img">
         <div class="item">
             <div class="icon">
@@ -1022,7 +1022,7 @@
             </div>
             <div>
                 <div class="title">
-                    官网直购
+                    正品保障
                 </div>
                 <span>厂家直接发货，100%正品</span>
             </div>
@@ -1040,13 +1040,13 @@
         </div>
         <div class="item">
             <div class="icon">
-                量
+                售
             </div>
             <div>
                 <div class="title">
-                    海量商品
+                    售后无忧
                 </div>
-                <span>全球千万酒品，一站购齐</span>
+                <span>7天无理由退货</span>
             </div>
         </div>
         <div class="item">
