--- a/templates/view/specialgood/index.html
+++ b/templates/view/specialgood/index.html
@@ -995,7 +995,7 @@
 </div><!--out-wrap end-->
 <div class="bg-f5-to-f0" style="height: 40px;"></div>
 <!--版权信息代码-->
-<div class="new-footer clearfix" style="padding-bottom: 0px;">
+<div class="new-footer clearfix" >
     <div class="pop-img">
         <div class="item">
             <div class="icon">
@@ -1003,7 +1003,7 @@
             </div>
             <div>
                 <div class="title">
-                    官网直购
+                    正品保障
                 </div>
                 <span>厂家直接发货，100%正品</span>
             </div>
@@ -1021,13 +1021,13 @@
         </div>
         <div class="item">
             <div class="icon">
-                量
+                售
             </div>
             <div>
                 <div class="title">
-                    海量商品
+                    售后无忧
                 </div>
-                <span>全球千万酒品，一站购齐</span>
+                <span>7天无理由退货</span>
             </div>
         </div>
         <div class="item">
