修改了首页一部分

--- a/templates/view/firstpage/index.html
+++ b/templates/view/firstpage/index.html
@@ -1940,6 +1940,252 @@
                 </div>
             </div><!--3F结束-->
 
+            <div class="benifits-goods  clearfix" id="4F">
+            <div class="title">精选混合专场
+                <div class="linkselect fr">
+                    <a target="_blank" href="#" class="fr">连衣裙</a>
+                    <a target="_blank" href="#" class="fr">T恤</a>
+                    <a target="_blank" href="#" class="fr">泳衣</a>
+                    <a target="_blank" href="#" class="fr">内衣</a>
+                </div>
+            </div>
+            <div class="brands-content clearfix">
+                <div class="hotSale-item J-hotSale-item">
+                    <a class="hotSale-brand-img-box" href="#" target="_blank">
+                        <img class="hotSale-brand-img"
+                             src="../../images/firstpage/PC_xngj.jpg"
+                             alt="摩登优雅 自信相随" style="display: inline;">
+                    </a>
+                    <a class="hotSale-info"  href="#" target="_blank">
+                        <img class="hotSale-logo-img"
+                             src="../../images/firstpage/primary.png"
+                             width="100" height="50" alt="摩登优雅 自信相随" style="display: inline;">
+                        <p class="hotSale-name">摩登优雅 自信相随</p>
+                        <p class="hotSale-pms" id="J_hotSale_pms_1884236" title="满1件打6折">满1件打6折</p>
+                    </a>
+                    <div class="hotSale-hover trans300 J-hotSale-hover">
+                        <div class="hotSale-pro-list clearfix">
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_1.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_2.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_3.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                        </div>
+                        <a href="#" target="_blank">
+                            <img class="hotSale-logo-img"
+                                 src="../../images/firstpage/primary.png"
+                                 width="100" height="50" alt="摩登优雅 自信相随">
+                        </a>
+                        <a class="enter-btn" href="#" target="_blank" >进入专场</a>
+                    </div>
+                </div>
+                <div class="hotSale-item J-hotSale-item">
+                    <a class="hotSale-brand-img-box" href="#" target="_blank">
+                        <img class="hotSale-brand-img"
+                             src="../../images/firstpage/PC_xngj.jpg"
+                             alt="摩登优雅 自信相随" style="display: inline;">
+                    </a>
+                    <a class="hotSale-info"  href="#" target="_blank">
+                        <img class="hotSale-logo-img"
+                             src="../../images/firstpage/primary.png"
+                             width="100" height="50" alt="摩登优雅 自信相随" style="display: inline;">
+                        <p class="hotSale-name">摩登优雅 自信相随</p>
+                        <p class="hotSale-pms" id="" title="满1件打6折">满1件打6折</p>
+                    </a>
+                    <div class="hotSale-hover trans300 J-hotSale-hover">
+                        <div class="hotSale-pro-list clearfix">
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_1.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_2.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_3.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                        </div>
+                        <a href="#" target="_blank">
+                            <img class="hotSale-logo-img"
+                                 src="../../images/firstpage/primary.png"
+                                 width="100" height="50" alt="摩登优雅 自信相随">
+                        </a>
+                        <a class="enter-btn" href="#" target="_blank" >进入专场</a>
+                    </div>
+                </div>
+                <div class="hotSale-item J-hotSale-item">
+                    <a class="hotSale-brand-img-box" href="#" target="_blank">
+                        <img class="hotSale-brand-img"
+                             src="../../images/firstpage/PC_xngj.jpg"
+                             alt="摩登优雅 自信相随" style="display: inline;">
+                    </a>
+                    <a class="hotSale-info"  href="#" target="_blank">
+                        <img class="hotSale-logo-img"
+                             src="../../images/firstpage/primary.png"
+                             width="100" height="50" alt="摩登优雅 自信相随" style="display: inline;">
+                        <p class="hotSale-name">摩登优雅 自信相随</p>
+                        <p class="hotSale-pms" id="" title="满1件打6折">满1件打6折</p>
+                    </a>
+                    <div class="hotSale-hover trans300 J-hotSale-hover">
+                        <div class="hotSale-pro-list clearfix">
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_1.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_2.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_3.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                        </div>
+                        <a href="#" target="_blank">
+                            <img class="hotSale-logo-img"
+                                 src="../../images/firstpage/primary.png"
+                                 width="100" height="50" alt="摩登优雅 自信相随">
+                        </a>
+                        <a class="enter-btn" href="#" target="_blank" >进入专场</a>
+                    </div>
+                </div>
+                <div class="hotSale-item J-hotSale-item">
+                    <a class="hotSale-brand-img-box" href="#" target="_blank">
+                        <img class="hotSale-brand-img"
+                             src="../../images/firstpage/PC_xngj.jpg"
+                             alt="摩登优雅 自信相随" style="display: inline;">
+                    </a>
+                    <a class="hotSale-info"  href="#" target="_blank">
+                        <img class="hotSale-logo-img"
+                             src="../../images/firstpage/primary.png"
+                             width="100" height="50" alt="摩登优雅 自信相随" style="display: inline;">
+                        <p class="hotSale-name">摩登优雅 自信相随</p>
+                        <p class="hotSale-pms" id="" title="满1件打6折">满1件打6折</p>
+                    </a>
+                    <div class="hotSale-hover trans300 J-hotSale-hover">
+                        <div class="hotSale-pro-list clearfix">
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_1.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_2.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_3.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                        </div>
+                        <a href="#" target="_blank">
+                            <img class="hotSale-logo-img"
+                                 src="../../images/firstpage/primary.png"
+                                 width="100" height="50" alt="摩登优雅 自信相随">
+                        </a>
+                        <a class="enter-btn" href="#" target="_blank" >进入专场</a>
+                    </div>
+                </div>
+                <div class="hotSale-item J-hotSale-item">
+                    <a class="hotSale-brand-img-box" href="#" target="_blank">
+                        <img class="hotSale-brand-img"
+                             src="../../images/firstpage/PC_xngj.jpg"
+                             alt="摩登优雅 自信相随" style="display: inline;">
+                    </a>
+                    <a class="hotSale-info"  href="#" target="_blank">
+                        <img class="hotSale-logo-img"
+                             src="../../images/firstpage/primary.png"
+                             width="100" height="50" alt="摩登优雅 自信相随" style="display: inline;">
+                        <p class="hotSale-name">摩登优雅 自信相随</p>
+                        <p class="hotSale-pms" id="" title="满1件打6折">满1件打6折</p>
+                    </a>
+                    <div class="hotSale-hover trans300 J-hotSale-hover">
+                        <div class="hotSale-pro-list clearfix">
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_1.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_2.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_3.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                        </div>
+                        <a href="#" target="_blank">
+                            <img class="hotSale-logo-img"
+                                 src="../../images/firstpage/primary.png"
+                                 width="100" height="50" alt="摩登优雅 自信相随">
+                        </a>
+                        <a class="enter-btn" href="#" target="_blank" >进入专场</a>
+                    </div>
+                </div>
+                <div class="hotSale-item J-hotSale-item">
+                    <a class="hotSale-brand-img-box" href="#" target="_blank">
+                        <img class="hotSale-brand-img"
+                             src="../../images/firstpage/PC_xngj.jpg"
+                             alt="摩登优雅 自信相随" style="display: inline;">
+                    </a>
+                    <a class="hotSale-info"  href="#" target="_blank">
+                        <img class="hotSale-logo-img"
+                             src="../../images/firstpage/primary.png"
+                             width="100" height="50" alt="摩登优雅 自信相随" style="display: inline;">
+                        <p class="hotSale-name">摩登优雅 自信相随</p>
+                        <p class="hotSale-pms" id="" title="满1件打6折">满1件打6折</p>
+                    </a>
+                    <div class="hotSale-hover trans300 J-hotSale-hover">
+                        <div class="hotSale-pro-list clearfix">
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_1.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_2.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                            <a class="hotSale-pro-item" href="#">
+                                <img class="hotSale-pro-img"
+                                     src="../../images/firstpage/brand_hover_img_3.jpg"  alt="黑灰色毛领大方中长款长袖驼绒服">
+                                <p class="hotSale-pro-price">¥1257</p>
+                            </a>
+                        </div>
+                        <a href="#" target="_blank">
+                            <img class="hotSale-logo-img"
+                                 src="../../images/firstpage/primary.png"
+                                 width="100" height="50" alt="摩登优雅 自信相随">
+                        </a>
+                        <a class="enter-btn" href="#" target="_blank" >进入专场</a>
+                    </div>
+                </div>
+            </div>
+        </div><!--3F结束-->
 
 
 
