修改了首页一部分

--- a/templates/css/common/common.css
+++ b/templates/css/common/common.css
@@ -487,4 +487,40 @@ a, a:hover {
 }
 
 
+/*@keyframes blink {
+    to {
+        opacity:0.8;
+        filter:alpha(opacity=80); !* 针对 IE8 以及更早的版本 *!
+    }
+}*/
+a:hover img {
+    -webkit-animation: blink 1s;
+    animation: blink 1s;
+}
 
+
+@-webkit-keyframes blink{
+    0%{opacity:1}
+    50%{opacity:.7}
+    100%{opacity:1}
+}
+@keyframes blink{
+    0%{opacity:1}
+    50%{opacity:.7}
+    100%{opacity:1}
+}
+
+.benifits-goods .picture:hover{
+    -webkit-animation: blink 1s;
+    animation: blink 1s;
+}
+
+/*商品详情页的模糊*/
+.goods-img:hover{
+    -webkit-animation: blink 1s;
+    animation: blink 1s;
+}
+.m-pic:hover{
+    -webkit-animation: blink 1s;
+    animation: blink 1s;
+}
