--- a/templates/css/common/common.css
+++ b/templates/css/common/common.css
@@ -510,7 +510,7 @@ a:hover img {
     100%{opacity:1}
 }
 
-.picture:hover{
+.benifits-goods .picture:hover{
     -webkit-animation: blink 1s;
     animation: blink 1s;
 }
