修改了首页一部分

--- a/templates/view/header/index.html
+++ b/templates/view/header/index.html
@@ -51,7 +51,9 @@
 
 <div class="topsearch clearfix">
     <div class="specify">
-        <a href="#" class="icon icon-logo"></a>
+        <a href="#" class="icon icon-logo">
+
+        </a>
 
         <div class="search-area fr">
             <a target="_blank" href="javascript:;" class="j_go_search"></a>
