修改了首页一部分

--- a/templates/css/hearder/hearder.css
+++ b/templates/css/hearder/hearder.css
@@ -62,7 +62,7 @@
     margin: 39px 0;
     width: 270px;
     height: 30px;
-    background-image: url(../../images/hearder/99.png);;
+    background-image: url(../../images/hearder/99_2.png);;
 }
 .topsearch .search-area{
     -webkit-border-radius: 10px;
